force-app/main/default/objects/Trade__c/Trade__c.object-meta.xml
<CustomObject>
    <label>Trade</label>
    <nameField>
        <displayFormat>TN# {00000000}</displayFormat>
        <label>Trade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trades</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>