force-app/main/default/objects/Trade__c/fields/Close_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Time__c</fullName>
    <label>Close Date/Time</label>
    <type>DateTime</type>
</CustomField>