force-app/main/default/objects/Trade__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <label>Evaluation</label>
    <type>TextArea</type>
</CustomField>