force-app/main/default/objects/Trade__c/fields/Open_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Open_Date_Time__c</fullName>
    <label>Open Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>