force-app/main/default/objects/Trade__c/fields/Open_Price__c.field-meta.xml
<CustomField>
    <fullName>Open_Price__c</fullName>
    <label>Open Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>