force-app/main/default/objects/Trade__c/fields/Opening_Description__c.field-meta.xml
<CustomField>
    <fullName>Opening_Description__c</fullName>
    <label>Opening Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>