force-app/main/default/objects/Trade__c/fields/Position_Image__c.field-meta.xml
<CustomField>
    <fullName>Position_Image__c</fullName>
    <formula>IMAGE( Image__c , &quot;No Image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Image</label>
    <type>Text</type>
</CustomField>