force-app/main/default/objects/Trade__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>SL Hit</fullName>
            </value>
            <value>
                <fullName>TP Hit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>