force-app/main/default/objects/Trade__c/fields/Side__c.field-meta.xml
<CustomField>
    <fullName>Side__c</fullName>
    <label>Side</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>