force-app/main/default/objects/Trade__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUDCAD</fullName>
            </value>
            <value>
                <fullName>AUDCHF</fullName>
            </value>
            <value>
                <fullName>AUDJPY</fullName>
            </value>
            <value>
                <fullName>AUDNZD</fullName>
            </value>
            <value>
                <fullName>AUDUSD</fullName>
            </value>
            <value>
                <fullName>CADJPY</fullName>
            </value>
            <value>
                <fullName>CHFJPY</fullName>
            </value>
            <value>
                <fullName>EURAUD</fullName>
            </value>
            <value>
                <fullName>EURCAD</fullName>
            </value>
            <value>
                <fullName>EURCHF</fullName>
            </value>
            <value>
                <fullName>EURGBP</fullName>
            </value>
            <value>
                <fullName>EURJPY</fullName>
            </value>
            <value>
                <fullName>EURNZD</fullName>
            </value>
            <value>
                <fullName>EURUSD</fullName>
            </value>
            <value>
                <fullName>GBPAUD</fullName>
            </value>
            <value>
                <fullName>GBPCAD</fullName>
            </value>
            <value>
                <fullName>GBPCHF</fullName>
            </value>
            <value>
                <fullName>GBPEUR</fullName>
            </value>
            <value>
                <fullName>GBPJPY</fullName>
            </value>
            <value>
                <fullName>GBPNZD</fullName>
            </value>
            <value>
                <fullName>GBPUSD</fullName>
            </value>
            <value>
                <fullName>NZDJPY</fullName>
            </value>
            <value>
                <fullName>NZDUSD</fullName>
            </value>
            <value>
                <fullName>USDJPY</fullName>
            </value>
            <value>
                <fullName>USDCAD</fullName>
            </value>
            <value>
                <fullName>USDCHF</fullName>
            </value>
            <value>
                <fullName>USDCHN</fullName>
            </value>
            <value>
                <fullName>USDDKK</fullName>
            </value>
            <value>
                <fullName>XAUUSD</fullName>
            </value>
            <value>
                <fullName>XAGUSD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>